--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -23,6 +23,8 @@ jobs:
           - name: test2.txt
             option: -n
     steps:
+      - name: Checkout repository
+        uses: actions/checkout@v2
       - name: prepare
         run: echo prepare
       - name: run
